[gd_scene load_steps=8 format=2]

[ext_resource path="res://sounds/cave/land.wav" type="AudioStream" id=1]
[ext_resource path="res://sounds/cave/jump.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/cave/get_key.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/cave/coin.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/cave/step.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/cave/miss.wav" type="AudioStream" id=6]
[ext_resource path="res://objects/SoundController.gd" type="Script" id=7]

[node name="SoundController" type="Node"]
script = ExtResource( 7 )

[node name="Audio_Coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0
bus = "SFX"

[node name="Audio_GetKey" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0
bus = "SFX"

[node name="Audio_Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -8.0
bus = "SFX"

[node name="Audio_Land" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -8.0
bus = "SFX"

[node name="Audio_Miss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0
bus = "SFX"

[node name="Audio_Step" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0
bus = "SFX"
